--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,8 @@
-<%- include("header")-%>
+<%- include("./partials/header")-%>
 
     <h1>About</h1>
-    <p><%=aboutContent%></p>
+    <p>
+        <%=aboutContent%>
+    </p>
 
-        <%- include("footer")-%>
+    <%- include("./partials/footer")-%>
