--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,8 @@
-<%- include("header")-%>
+<%- include("./partials/header")-%>
 
     <h1>Contact</h1>
-    <p><%=contactContent%></p>
-    
-        <%- include("footer")-%>
+    <p>
+        <%=contactContent%>
+    </p>
+
+    <%- include("./partials/footer")-%>
