--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,11 @@
-
 </div>
-<div class="footer-padding"></div>
+
+<div class="footer-padding">
   <div class="footer">
     <p>Made with ❤️ by Rajneesh Mishra</p>
   </div>
 </div>
+
 </body>
+
 </html>
