--- a/public/styles.css
+++ b/public/styles.css
@@ -21,9 +21,6 @@ html {
     color: #1abc9c !important;
 }
 
-.footer-padding {
-    padding-bottom: 80px;
-}
 
 .footer {
     position: fixed;
@@ -38,4 +35,8 @@ html {
     margin-top: 25px;
     font-size: 12px;
     color: #fff;
+}
+
+form {
+    margin-bottom: 70px;
 }
